reports/ch4-content.log
Traceback (most recent call last):
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/decaluwe/opt/anaconda3/envs/text/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
from math import exp
import matplotlib.pyplot as plt
%matplotlib inline

etas = np.concatenate([np.geomspace(-.25, -1e-3, 50), np.geomspace(1e-3, .25, 50)])
currents = np.zeros_like(etas)

# Constants:
R = 8.3145 # J/mol-K
F = 96485  # C per mol e-

# Inputs
i_0 = 2.15 # Exchange current density, A/cm2
n = 1      # Elementary charge transferred
T = 298.15 # K
alpha_f = 0.5


for i, eta in enumerate(etas):
    currents[i] = 

------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    currents[i] =[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3259766331.py, line 21)

